--- a/trunk/Pisqorks.WebUI/Pisqorks.WebUI.csproj
+++ b/trunk/Pisqorks.WebUI/Pisqorks.WebUI.csproj
@@ -127,10 +127,12 @@
   <ItemGroup>
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\UnityConfig.cs" />
+    <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\ContentController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Account\LoginModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UnityDependencyResolver.cs" />
   </ItemGroup>
@@ -156,6 +158,9 @@
     <Content Include="Scripts\Pisqorks\Account\AccountModule.js" />
     <Content Include="Scripts\Pisqorks\Account\LoginPage.js" />
     <Content Include="Scripts\Pisqorks\BaseObject.js" />
+    <Content Include="Scripts\Pisqorks\Game\GameModule.js" />
+    <Content Include="Scripts\Pisqorks\UI\BindingManager.js" />
+    <Content Include="Scripts\Pisqorks\UserContext.js" />
     <Content Include="Scripts\Pisqorks\EventBus.js" />
     <Content Include="Scripts\Pisqorks\FeatureRequest.js" />
     <Content Include="Scripts\Pisqorks\UI\Layout.js" />
@@ -180,7 +185,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
