--- a/Pisqorks.Core.DataAccess.InMemory/Pisqorks.Core.DataAccess.InMemory.csproj
+++ b/Pisqorks.Core.DataAccess.InMemory/Pisqorks.Core.DataAccess.InMemory.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{2852F4CC-E6C2-485D-AE52-4859F8B8B439}</ProjectGuid>
+    <ProjectGuid>{F4763D6A-5130-4AAA-9593-4268B87B9128}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Pisqorks.Core</RootNamespace>
-    <AssemblyName>Pisqorks.Core</AssemblyName>
+    <RootNamespace>Pisqorks.Core.DataAccess.InMemory</RootNamespace>
+    <AssemblyName>Pisqorks.Core.DataAccess.InMemory</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -39,13 +39,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AccountService.cs" />
-    <Compile Include="DataAccess\IUserLogRepository.cs" />
-    <Compile Include="DataAccess\IAccountRepository.cs" />
-    <Compile Include="LocalAccount.cs" />
-    <Compile Include="UserAccount.cs" />
+    <Compile Include="AccountRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UserLog.cs" />
+    <Compile Include="UserLogRepository.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Pisqorks.Core\Pisqorks.Core.csproj">
+      <Project>{2852f4cc-e6c2-485d-ae52-4859f8b8b439}</Project>
+      <Name>Pisqorks.Core</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
