--- a/Pisqorks.WebUI/packages.config
+++ b/Pisqorks.WebUI/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AttributeRouting" version="3.5.6" targetFramework="net45" />
+  <package id="AttributeRouting.Core" version="3.5.6" targetFramework="net45" />
+  <package id="AttributeRouting.Core.Web" version="3.5.6" targetFramework="net45" />
   <package id="jQuery" version="1.9.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="4.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc.FixedDisplayModes" version="1.0.0" targetFramework="net45" />
@@ -15,5 +18,6 @@
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net45" />
   <package id="Twitter.Bootstrap" version="2.3.1" targetFramework="net45" />
   <package id="Unity" version="3.0.1304.0" targetFramework="net45" />
+  <package id="WebActivator" version="1.0.0.0" targetFramework="net45" />
   <package id="WebGrease" version="1.3.0" targetFramework="net45" />
 </packages>
