--- a/trunk/Pisqorks.Core.DataAccess.InMemory/Pisqorks.Core.DataAccess.InMemory.csproj
+++ b/trunk/Pisqorks.Core.DataAccess.InMemory/Pisqorks.Core.DataAccess.InMemory.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccountRepository.cs" />
+    <Compile Include="GameRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserLogRepository.cs" />
   </ItemGroup>
